tizen: OICSensorBoard: use OSTYPE variable instead of linux
Then it can be build for tizen too

Change-Id: I6110969ac8b9fbc8c24f66fe5cb06cd3b72bd2b1
Signed-off-by: Philippe Coval <philippe.coval@osg.samsung.com>

--- a/examples/OICSensorBoard/Makefile
+++ b/examples/OICSensorBoard/Makefile
@@ -3,6 +3,7 @@ default: all
 #Set the two variables below for the client build.
 CLIENTARCH?=x86
 BUILDTYPE?=release
+OSTYPE?=linux
 ##
 
 YOCTOCXXFLAGS=-I$(SDKTARGETSYSROOT)/usr/include/iotivity/resource/ -I$(SDKTARGETSYSROOT)/usr/include/iotivity/resource/stack -I$(SDKTARGETSYSROOT)/usr/include/iotivity/resource/ocrandom -I$(SDKTARGETSYSROOT)/usr/include/iotivity/resource/logger -I$(SDKTARGETSYSROOT)/usr/include/iotivity/resource/oc_logger
@@ -11,7 +12,9 @@ YOCTOLDFLAGS=-loc -loctbstack -loc_logger -lmraa
 
 CXXFLAGS=-I../../resource/include -I../../resource/c_common -I../../resource/csdk/stack/include -I../../resource/c_common/ocrandom/include -I../../resource/csdk/logger/include -I../../resource/oc_logger/include
 
-LDFLAGS=-L../../out/linux/$(CLIENTARCH)/$(BUILDTYPE) -loc -loctbstack -loc_logger
+LDFLAGS=-L../../out/${OSTYPE}/$(CLIENTARCH)/$(BUILDTYPE) \
+  -loc -loctbstack -loc_logger \
+  -lconnectivity_abstraction
 
 install_dir?=${DESTDIR}/usr/lib/iotivity/examples/OICSensorBoard
 
