WIP: mod: service/resource-encapsulation/src/common/SConscript (sandbox/pcoval/master/wip)
Change-Id: Ie4e7ce8e52c4deae0c3c7efe87d496c9ec09e20c
Signed-off-by: Philippe Coval <philippe.coval@osg.samsung.com>

--- a/service/resource-encapsulation/src/common/SConscript
+++ b/service/resource-encapsulation/src/common/SConscript
@@ -103,8 +103,6 @@ if target_os == 'linux':
 		'utils/include'
 		])
 
-	gtest = File(gtest_dir + '/lib/.libs/libgtest.a')
-	gtest_main = File(gtest_dir + '/lib/.libs/libgtest_main.a')
 
 	rcs_common_test_env.PrependUnique(LIBS = [
 		'octbstack',
@@ -112,8 +110,8 @@ if target_os == 'linux':
 		'connectivity_abstraction',
 		'coap',
 		'rcs_common',
-		gtest,
-		gtest_main,
+		'gtest',
+		'gtest_main',
 		'pthread'
 		])
 
