--- a/extlibs/gtest/SConscript
+++ b/extlibs/gtest/SConscript
@@ -8,13 +8,14 @@ import os
 
 Import('env')
 
+gtest_env = env.Clone()
 target_os = env.get('TARGET_OS')
 src_dir = env.get('SRC_DIR')
 
 targets_need_gtest = ['darwin','linux']
-gtest_dir      = src_dir + '/extlibs/gtest/gtest-1.7.0'
-gtest_zip_file = src_dir + '/extlibs/gtest/gtest-1.7.0.zip'
-gtest_url      = 'https://googletest.googlecode.com/files/gtest-1.7.0.zip'
+gtest_dir = os.path.join(src_dir, 'extlibs', 'gtest', 'gtest-1.7.0')
+gtest_zip_file = os.path.join(src_dir, 'extlibs', 'gtest', 'gtest-1.7.0.zip')
+gtest_url = 'https://googletest.googlecode.com/files/gtest-1.7.0.zip'
 
 if target_os in targets_need_gtest:
 	print '*** Checking for installation of google unit test 1.7.0 ***'
@@ -22,13 +23,13 @@ if target_os in targets_need_gtest:
 	if not os.path.exists(gtest_dir):
 		# If the gtest zip file is not already present, download it
 		if not os.path.exists(gtest_zip_file):
-			gtest_zip = env.Download(gtest_zip_file, gtest_url)
+			gtest_zip = gtest_env.Download(gtest_zip_file, gtest_url)
 		else:
 			gtest_zip = gtest_zip_file
 
 		# Unzip gtest
 		print 'Unzipping google unit test'
-		env.UnpackAll(gtest_dir, gtest_zip)
+		gtest_env.UnpackAll(gtest_dir, gtest_zip)
 
 
 if target_os == 'darwin':
@@ -43,11 +44,11 @@ if target_os == 'darwin':
 
 
 			print 'Invoke cmake command to generate appropriate make files'
-			env.Configure(gtest_dir, './configure')
+			gtest_env.Configure(gtest_dir, './configure')
 
 			# Run make on gtest
 			print 'Making google unit test'
-			env.Configure(gtest_dir, 'make')
+			gtest_env.Configure(gtest_dir, 'make')
 
 #			print 'Create a directory'
 #			os.mkdir(gtest_dotlib_dir)
@@ -69,13 +70,18 @@ elif target_os == 'linux':
 		if not os.path.exists(gtest_dir + "/lib"):
 			# Run configure on gtest
 			print 'Configuring google unit test'
-			if env.get('CROSS_COMPILE'):
-				env.Configure(gtest_dir, './configure --host=' + env['CROSS_COMPILE'])
+			if gtest_env.get('CROSS_COMPILE'):
+				gtest_env.Configure(gtest_dir, './configure --disable-shared --host=' + env['CROSS_COMPILE']);
 			else:
-				env.Configure(gtest_dir, './configure')
+				gtest_env.Configure(gtest_dir, './configure --disable-shared')
 
 			# Run make on gtest
 			print 'Making google unit test'
-			env.Configure(gtest_dir, 'make')
+			gtest_env.Configure(gtest_dir, 'make')
 
+# Export flags once
+if target_os in targets_need_gtest:
+	gtest_env.AppendUnique(LIBPATH = [ os.path.join(gtest_dir , 'lib', '.libs')])
+	gtest_env.PrependUnique(CPPPATH = [ os.path.join(gtest_dir, 'include')])
 
+Return('gtest_env')
