--- a/resource/csdk/connectivity/test/SConscript
+++ b/resource/csdk/connectivity/test/SConscript
@@ -18,12 +18,14 @@
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
-Import('env')
 import os
 import os.path
-catest_env = env.Clone()
 
-src_dir = catest_env.get('SRC_DIR')
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+catest_env = gtest_env.Clone()
+target_os = catest_env.get('TARGET_OS')
+target_transport = catest_env.get('TARGET_TRANSPORT')
 
 ######################################################################
 # Build flags
@@ -34,7 +36,6 @@ catest_env.PrependUnique(CPPPATH = [
                 '../../stack/include',
                 '../../extlibs/cjson',
                 '../../../oc_logger/include',
-                '../../../../extlibs/gtest/gtest-1.7.0/include'
                ])
 
 tmplist = catest_env['LINKFLAGS'][:]
@@ -44,8 +45,7 @@ if '-lpthread' in tmplist:
 
 catest_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall', '-pthread'])
 catest_env.AppendUnique(LIBS = ['pthread'])
-catest_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
-catest_env.AppendUnique(LIBPATH = [src_dir + '/extlibs/gtest/gtest-1.7.0/lib/.libs'])
+catest_env.AppendUnique(LIBPATH = [catest_env.get('BUILD_DIR')])
 catest_env.PrependUnique(LIBS = ['m',
                                     'octbstack',
                                     'connectivity_abstraction',
@@ -53,23 +53,18 @@ catest_env.PrependUnique(LIBS = ['m',
                                     'gtest',
                                     'gtest_main'])
 
-target_os = env.get('TARGET_OS')
-
 if target_os not in ['arduino', 'darwin', 'ios']:
 	catest_env.AppendUnique(LIBS=['rt'])
 
-if env.get('SECURED') == '1':
+if catest_env.get('SECURED') == '1':
     catest_env.AppendUnique(LIBS = ['tinydtls'])
 
-if env.get('LOGGING'):
+if catest_env.get('LOGGING'):
 	catest_env.AppendUnique(CPPDEFINES = ['TB_LOG'])
 
 ######################################################################
 # Source files and Targets
 ######################################################################
-
-target_os = env.get('TARGET_OS')
-target_transport = env.get('TARGET_TRANSPORT')
 
 if (('IP' in target_transport) or ('ALL' in target_transport)):
 	if target_os != 'arduino':
@@ -90,8 +85,8 @@ else:
 
 Alias("test", [catests])
 
-env.AppendTarget('test')
-if env.get('TEST') == '1':
+catest_env.AppendTarget('test')
+if catest_env.get('TEST') == '1':
         if target_os == 'linux':
                 from tools.scons.RunTest import *
                 run_test(catest_env,
