--- a/resource/csdk/security/provisioning/unittest/SConscript
+++ b/resource/csdk/security/provisioning/unittest/SConscript
@@ -17,14 +17,13 @@
 # // limitations under the License.
 # //
 # //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-#
 
-Import('env')
 import os
 import os.path
-sptest_env = env.Clone()
 
-src_dir = sptest_env.get('SRC_DIR')
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+sptest_env = gtest_env.Clone()
 
 ######################################################################
 # Build flags
@@ -39,14 +38,12 @@ sptest_env.PrependUnique(CPPPATH = [
 		'../../../logger/include',
 		'../../../stack/include',
 		'../../../../oc_logger/include',
-		'../../../../../extlibs/gtest/gtest-1.7.0/include',
 		'../include',
 		'../include/internal'
 		])
 sptest_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall', '-pthread'])
 sptest_env.AppendUnique(LIBS = ['-lpthread','-ldl'])
-sptest_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
-sptest_env.AppendUnique(LIBPATH = [src_dir + '/extlibs/gtest/gtest-1.7.0/lib/.libs'])
+sptest_env.AppendUnique(LIBPATH = [sptest_env.get('BUILD_DIR')])
 sptest_env.PrependUnique(LIBS = [   'ocpmapi',
                                     'oc',
                                     'ocsrm',
@@ -57,13 +54,13 @@ sptest_env.PrependUnique(LIBS = [   'ocpmapi',
                                     'gtest',
                                     'gtest_main'])
 
-if env.get('SECURED') == '1':
+if sptest_env.get('SECURED') == '1':
     sptest_env.AppendUnique(LIBS = ['tinydtls'])
-if env.get('DTLS_WITH_X509') == '1':
+if sptest_env.get('DTLS_WITH_X509') == '1':
 	sptest_env.AppendUnique(LIBS = ['CKManager'])
 	sptest_env.AppendUnique(LIBS = ['asn1'])
 
-if not env.get('RELEASE'):
+if not sptest_env.get('RELEASE'):
 	sptest_env.AppendUnique(CPPDEFINES = ['TB_LOG'])
 
 ######################################################################
@@ -76,17 +73,16 @@ unittest = sptest_env.Program('unittest', ['pmutilitytest.cpp', 'otmunittest.cpp
 
 Alias("test", [unittest])
 
-env.AppendTarget('test')
-if env.get('TEST') == '1':
-	target_os = env.get('TARGET_OS')
+sptest_env.AppendTarget('test')
+if sptest_env.get('TEST') == '1':
+	target_os = sptest_env.get('TARGET_OS')
 	if target_os == 'linux':
-		out_dir = env.get('BUILD_DIR')
-		result_dir = env.get('BUILD_DIR') + '/test_out/'
+		out_dir = sptest_env.get('BUILD_DIR')
+		result_dir = os.path.join(sptest_env.get('BUILD_DIR'), 'test_out')
 		if not os.path.isdir(result_dir):
 			os.makedirs(result_dir)
 		sptest_env.AppendENVPath('GTEST_OUTPUT', ['xml:'+ result_dir])
 		sptest_env.AppendENVPath('LD_LIBRARY_PATH', [out_dir])
-		sptest_env.AppendENVPath('LD_LIBRARY_PATH', ['./extlibs/gtest/gtest-1.7.0/lib/.libs'])
 		ut = sptest_env.Command ('ut', None, out_dir + '/resource/csdk/security/provisioning/unittest/unittest')
 		AlwaysBuild ('ut')
 
