--- a/resource/csdk/security/unittest/SConscript
+++ b/resource/csdk/security/unittest/SConscript
@@ -17,13 +17,13 @@
 # // limitations under the License.
 # //
 # //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-#
 
-Import('env')
 import os
 import os.path
-srmtest_env = env.Clone()
 
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+srmtest_env = gtest_env.Clone()
 src_dir = srmtest_env.get('SRC_DIR')
 
 ######################################################################
@@ -42,7 +42,6 @@ srmtest_env.PrependUnique(CPPPATH = [
 		'../../stack/include',
 		'../../stack/include/internal',
 		'../../../oc_logger/include',
-		'../../../../extlibs/gtest/gtest-1.7.0/include',
 		'../../../../extlibs/cjson/',
                 '../provisioning/include',
 #		'../../../../extlibs/tinydtls/',
@@ -51,8 +50,7 @@ srmtest_env.PrependUnique(CPPPATH = [
 
 srmtest_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall', '-pthread'])
 srmtest_env.AppendUnique(LIBS = ['-lpthread'])
-srmtest_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
-srmtest_env.AppendUnique(LIBPATH = [src_dir + '/extlibs/gtest/gtest-1.7.0/lib/.libs'])
+srmtest_env.AppendUnique(LIBPATH = [srmtest_env.get('BUILD_DIR')])
 srmtest_env.PrependUnique(LIBS = ['ocsrm',
                                     'octbstack',
                                     'oc_logger',
@@ -61,10 +59,10 @@ srmtest_env.PrependUnique(LIBS = ['ocsrm',
                                     'gtest',
                                     'gtest_main'])
 
-if env.get('SECURED') == '1':
+if srmtest_env.get('SECURED') == '1':
     srmtest_env.AppendUnique(LIBS = ['tinydtls'])
 
-if not env.get('RELEASE'):
+if not srmtest_env.get('RELEASE'):
 	srmtest_env.AppendUnique(CPPDEFINES = ['TB_LOG'])
 
 ######################################################################
@@ -87,7 +85,7 @@ unittest = srmtest_env.Program('unittest', ['aclresourcetest.cpp',
 Alias("test", [unittest])
 
 unittest_src_dir = src_dir + '/resource/csdk/security/unittest/'
-unittest_build_dir = env.get('BUILD_DIR') + 'resource/csdk/security/unittest'
+unittest_build_dir = os.path.join(srmtest_env.get('BUILD_DIR'), 'resource', 'csdk', 'security', 'unittest')
 
 srmtest_env.AppendUnique(CPPDEFINES = ['SECURITY_BUILD_UNITTEST_DIR='+unittest_build_dir])
 
@@ -105,16 +103,15 @@ srmtest_env.Alias("install", srmtest_env.Install( unittest_build_dir,
 srmtest_env.Alias("install", srmtest_env.Install( unittest_build_dir,
     unittest_src_dir + 'oic_unittest_default_acl.dat'))
 
-env.AppendTarget('test')
-if env.get('TEST') == '1':
-	target_os = env.get('TARGET_OS')
+srmtest_env.AppendTarget('test')
+if srmtest_env.get('TEST') == '1':
+	target_os = srmtest_env.get('TARGET_OS')
 	if target_os == 'linux':
-		out_dir = env.get('BUILD_DIR')
-		result_dir = env.get('BUILD_DIR') + '/test_out/'
+		out_dir = srmtest_env.get('BUILD_DIR')
+		result_dir = os.path.join(srmtest_env.get('BUILD_DIR'), 'test_out')
 		if not os.path.isdir(result_dir):
 			os.makedirs(result_dir)
 		srmtest_env.AppendENVPath('GTEST_OUTPUT', ['xml:'+ result_dir])
 		srmtest_env.AppendENVPath('LD_LIBRARY_PATH', [out_dir])
-		srmtest_env.AppendENVPath('LD_LIBRARY_PATH', ['./extlibs/gtest/gtest-1.7.0/lib/.libs'])
-		ut = srmtest_env.Command ('ut', None, out_dir + '/resource/csdk/security/unittest/unittest')
-		AlwaysBuild ('ut')
+		from tools.scons.RunTest import *
+		run_test(srmtest_env,'ut','resource/csdk/security/unittest/unittest')
