--- a/resource/csdk/stack/test/SConscript
+++ b/resource/csdk/stack/test/SConscript
@@ -18,12 +18,13 @@
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
-Import('env')
 import os
 import os.path
-stacktest_env = env.Clone()
 
-src_dir = stacktest_env.get('SRC_DIR')
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+stacktest_env = gtest_env.Clone()
+target_os = stacktest_env.get('TARGET_OS')
 
 ######################################################################
 # Build flags
@@ -39,13 +40,11 @@ stacktest_env.PrependUnique(CPPPATH = [
 		'../../connectivity/external/inc',
 		'../../extlibs/cjson',
 		'../../../oc_logger/include',
-		'#extlibs/gtest/gtest-1.7.0/include'
 		])
 
 stacktest_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall', '-pthread'])
 stacktest_env.AppendUnique(LIBS = ['-lpthread'])
-stacktest_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
-stacktest_env.AppendUnique(LIBPATH = [src_dir + '/extlibs/gtest/gtest-1.7.0/lib/.libs'])
+stacktest_env.AppendUnique(LIBPATH = [stacktest_env.get('BUILD_DIR')])
 stacktest_env.PrependUnique(LIBS = ['m',
                                     'octbstack',
                                     'ocsrm',
@@ -54,15 +53,15 @@ stacktest_env.PrependUnique(LIBS = ['m',
                                     'gtest',
                                     'gtest_main'])
 
-target_os = env.get('TARGET_OS')
+target_os = stacktest_env.get('TARGET_OS')
 if target_os != 'darwin':
     stacktest_env.PrependUnique(LIBS = ['oc_logger'])
 
 
-if env.get('SECURED') == '1':
+if stacktest_env.get('SECURED') == '1':
     stacktest_env.AppendUnique(LIBS = ['tinydtls'])
 
-if env.get('LOGGING'):
+if stacktest_env.get('LOGGING'):
 	stacktest_env.AppendUnique(CPPDEFINES = ['TB_LOG'])
 
 ######################################################################
@@ -73,9 +72,8 @@ cbortests = stacktest_env.Program('cbortests', ['cbortests.cpp'])
 
 Alias("test", [stacktests, cbortests])
 
-env.AppendTarget('test')
-if env.get('TEST') == '1':
-	target_os = env.get('TARGET_OS')
+stacktest_env.AppendTarget('test')
+if stacktest_env.get('TEST') == '1':
 	if target_os == 'linux':
                 from tools.scons.RunTest import *
                 run_test(stacktest_env,
