--- a/service/resource-encapsulation/src/serverBuilder/SConscript
+++ b/service/resource-encapsulation/src/serverBuilder/SConscript
@@ -18,24 +18,20 @@
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+lib_env = gtest_env.Clone()
 ##
 # rcs_server (Server Builder) project build script
 ##
-import os
-Import('env')
 
 # Add third party libraries
-lib_env = env.Clone()
-SConscript(env.get('SRC_DIR') + '/service/third_party_libs.scons', exports = 'lib_env')
-
-src_dir = lib_env.get('SRC_DIR')
-
-gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
-
+SConscript('#service/third_party_libs.scons', exports = 'lib_env')
 server_builder_env = lib_env.Clone()
-target_os = env.get('TARGET_OS')
+release = server_builder_env.get('RELEASE')
+src_dir = server_builder_env.get('SRC_DIR')
+target_os = server_builder_env.get('TARGET_OS')
 
-release = env.get('RELEASE')
 
 ######################################################################
 # Build flags
@@ -46,9 +42,9 @@ server_builder_env.AppendUnique(CPPPATH = [
     '../../include',
     ])
 
-server_builder_env.AppendUnique(CPPPATH = [env.get('SRC_DIR')+'/extlibs', 'include'])
+server_builder_env.AppendUnique(CPPPATH = [server_builder_env.get('SRC_DIR')+'/extlibs', 'include'])
 
-server_builder_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
+server_builder_env.AppendUnique(LIBPATH = [server_builder_env.get('BUILD_DIR')])
 
 if target_os not in ['windows', 'winrt']:
     server_builder_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall'])
@@ -64,7 +60,7 @@ if target_os == 'android':
 
 server_builder_env.AppendUnique(LIBS = ['dl', 'oc', 'rcs_common'])
 
-if env.get('LOGGING'):
+if server_builder_env.get('LOGGING'):
 	server_builder_env.AppendUnique(LIBS = ['octbstack'])
 
 if not release:
@@ -74,7 +70,7 @@ if not release:
 ######################################################################
 # Source files and Targets
 ######################################################################
-server_builder_src = env.Glob('src/*.cpp')
+server_builder_src = server_builder_env.Glob('src/*.cpp')
 
 server_builder_static = server_builder_env.StaticLibrary('rcs_server', server_builder_src)
 server_builder_shared = server_builder_env.SharedLibrary('rcs_server', server_builder_src)
@@ -89,13 +85,9 @@ if target_os == 'linux':
 	server_builder_test_env = server_builder_env.Clone();
 
 	server_builder_test_env.AppendUnique(CPPPATH = [
-		env.get('SRC_DIR')+'/extlibs/hippomocks-master',
-		gtest_dir + '/include',
+		server_builder_test_env.get('SRC_DIR')+'/extlibs/hippomocks-master',
 		'../common/utils/include'
 		])
-
-	gtest = File(gtest_dir + '/lib/.libs/libgtest.a')
-	gtest_main = File(gtest_dir + '/lib/.libs/libgtest_main.a')
 
 	server_builder_test_env.PrependUnique(LIBS = [
 		'rcs_server',
@@ -103,18 +95,18 @@ if target_os == 'linux':
 		'oc_logger',
 		'connectivity_abstraction',
 		'coap',
-		gtest,
-		gtest_main,
+		'gtest',
+		'gtest_main',
 		'pthread',
 		])
 
-	server_builder_test_src = env.Glob('unittests/*.cpp')
+	server_builder_test_src = server_builder_test_env.Glob('unittests/*.cpp')
 
 	server_builder_test = server_builder_test_env.Program('rcs_server_test', server_builder_test_src)
 	Alias("rcs_server_test", server_builder_test)
-	env.AppendTarget('rcs_server_test')
+	server_builder_test_env.AppendTarget('rcs_server_test')
 
-	if env.get('TEST') == '1':
+	if server_builder_test_env.get('TEST') == '1':
 		from tools.scons.RunTest import *
 		run_test(server_builder_test_env, '',
 			'service/resource-encapsulation/src/serverBuilder/rcs_server_test')
