--- a/service/things-manager/unittests/SConscript
+++ b/service/things-manager/unittests/SConscript
@@ -18,53 +18,46 @@
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
+import os
+
+# SConscript file for Local PKI google tests
+gtest_env = SConscript('#extlibs/gtest/SConscript')
+lib_env = gtest_env.Clone()
+
 ##
 # ThingsManager Unit Test build script
 ##
-import os
-Import('env')
-
-if env.get('RELEASE'):
-        env.AppendUnique(CCFLAGS = ['-Os'])
-        env.AppendUnique(CPPDEFINES = ['NDEBUG'])
+if lib_env.get('RELEASE'):
+        lib_env.AppendUnique(CCFLAGS = ['-Os'])
+        lib_env.AppendUnique(CPPDEFINES = ['NDEBUG'])
 else:
-        env.AppendUnique(CCFLAGS = ['-g'])
+        lib_env.AppendUnique(CCFLAGS = ['-g'])
 
-if env.get('LOGGING'):
-        env.AppendUnique(CPPDEFINES = ['TB_LOG'])
+if lib_env.get('LOGGING'):
+        lib_env.AppendUnique(CPPDEFINES = ['TB_LOG'])
 
 # Add third party libraries
-lib_env = env.Clone()
-SConscript(env.get('SRC_DIR') + '/service/third_party_libs.scons', 'lib_env')
+SConscript(lib_env.get('SRC_DIR') + '/service/third_party_libs.scons', 'lib_env')
 
-target_os = env.get('TARGET_OS')
+target_os = lib_env.get('TARGET_OS')
 if target_os == 'linux':
-        # Verify that 'google unit test' library is installed.  If not,
-        # get it and install it
-        SConscript(env.get('SRC_DIR') + '/extlibs/gtest/SConscript')
-
         # Verify that 'hippomocks' mocking code is installed.  If not,
         # get it and install it
-        SConscript(env.get('SRC_DIR') + '/extlibs/hippomocks.scons')
+        SConscript(lib_env.get('SRC_DIR') + '/extlibs/hippomocks.scons')
 
 ThingsManager_gtest_env = lib_env.Clone()
 
 ######################################################################
 #unit test setting
 ######################################################################
-src_dir = lib_env.get('SRC_DIR')
-gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
+src_dir = ThingsManager_gtest_env.get('SRC_DIR')
 
 ######################################################################
 # Build flags
 ######################################################################
-gtest = File(gtest_dir + '/lib/.libs/libgtest.a')
-gtest_main = File(gtest_dir + '/lib/.libs/libgtest_main.a')
-
 ThingsManager_gtest_env.AppendUnique(
         CPPPATH = [
                 src_dir + '/extlibs/hippomocks-master',
-                src_dir + '/extlibs/gtest/gtest-1.7.0/include',
                 '../sdk/inc',
                 '../../../extlibs/timer'
         ])
@@ -83,22 +76,22 @@ ThingsManager_gtest_env.PrependUnique(LIBS = [
     'oc_logger_core',
     'oc',
     'octbstack',
-    gtest,
-    gtest_main])
+    'gtest',
+    'gtest_main'])
 
 ThingsManager_gtest_env.AppendUnique(LIBS = ['dl'])
 
 ######################################################################
 # Build Test
 ######################################################################
-ThingsManager_gtest_src = env.Glob('./*.cpp')
+ThingsManager_gtest_src = ThingsManager_gtest_env.Glob('./*.cpp')
 
 ThingsManagerTest = ThingsManager_gtest_env.Program('ThingsManagerTest', ThingsManager_gtest_src)
 Alias("ThingsManagerTest", ThingsManagerTest)
-env.AppendTarget('ThingsManagerTest')
+ThingsManager_gtest_env.AppendTarget('ThingsManagerTest')
 
-if env.get('TEST') == '1':
-    target_os = env.get('TARGET_OS')
+if ThingsManager_gtest_env.get('TEST') == '1':
+    target_os = ThingsManager_gtest_env.get('TARGET_OS')
     if target_os == 'linux':
         from tools.scons.RunTest import *
         run_test(ThingsManager_gtest_env, '',
