Build: reworked unit tests to use gtest in a more generic way
First as shared library is unused disable building it,
then scons will use the static one as default.

Also let's remove hardcoded path, as there is not warranty
that the files will be at the same place in any configurations.

Problem was observed when building on recent yocto configuration,
build also tested on Debian jessie.

If for some reason shared libs are desired, you can revert that patch,
but double check about security checks ("ld: final link failed: Bad value")

Bug-AGL: https://jira.automotivelinux.org/browse/SPEC-158
Change-Id: Ia13ee8c03f65f3407e88ff21d51b292261c9f2a3
Signed-off-by: Philippe Coval <philippe.coval@osg.samsung.com>

--- a/extlibs/gtest/SConscript
+++ b/extlibs/gtest/SConscript
@@ -12,8 +12,8 @@ target_os = env.get('TARGET_OS')
 src_dir = env.get('SRC_DIR')
 
 targets_need_gtest = ['darwin','linux']
-gtest_dir      = src_dir + '/extlibs/gtest/gtest-1.7.0'
-gtest_zip_file = src_dir + '/extlibs/gtest/gtest-1.7.0.zip'
+gtest_dir      = os.path.join(src_dir, 'extlibs', 'gtest', 'gtest-1.7.0')
+gtest_zip_file = os.path.join(src_dir, 'extlibs', 'gtest', 'gtest-1.7.0.zip')
 gtest_url      = 'https://googletest.googlecode.com/files/gtest-1.7.0.zip'
 
 if target_os in targets_need_gtest:
@@ -79,3 +79,5 @@ elif target_os == 'linux':
 			env.Configure(gtest_dir, 'make')
 
 
+env.AppendUnique(LIBPATH = [ os.path.join(gtest_dir , 'lib', '.libs')])
+env.PrependUnique(CPPPATH = [ os.path.join(gtest_dir, 'include')])
