--- a/service/resource-container/unittests/SConscript
+++ b/service/resource-container/unittests/SConscript
@@ -17,6 +17,7 @@
 # limitations under the License.
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+SConscript('#extlibs/gtest/SConscript')
 
 ##
 # ResourceContainer (rcs_container) Unit Test build script
@@ -76,7 +77,6 @@ target_os = env.get('TARGET_OS')
 
 ######################### unit test setting ##########################
 src_dir = lib_env.get('SRC_DIR')
-gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
 ######################################################################
 
 
@@ -113,8 +113,7 @@ if target_os == 'android':
     container_gtest_env.AppendUnique(CXXFLAGS = ['-frtti', '-fexceptions'])
     container_gtest_env.PrependUnique(LIBS = ['gnustl_shared', 'compatibility', 'log'])
 
-container_gtest_env.PrependUnique(CPPPATH = [env.get('SRC_DIR')+'/extlibs/hippomocks-master',
-                             gtest_dir + '/include'])
+container_gtest_env.PrependUnique(CPPPATH = [env.get('SRC_DIR')+'/extlibs/hippomocks-master'])
 
 if int(containerJavaSupport):
     try:
