--- a/service/resource-encapsulation/src/common/SConscript
+++ b/service/resource-encapsulation/src/common/SConscript
@@ -17,7 +17,7 @@
 # limitations under the License.
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-
+SConscript('#extlibs/gtest/SConscript')
 ##
 # rcs_common (primitiveResource and expiryTimer) build script
 ##
@@ -29,8 +29,6 @@ lib_env = env.Clone()
 SConscript(env.get('SRC_DIR') + '/service/third_party_libs.scons', exports = 'lib_env')
 
 src_dir = lib_env.get('SRC_DIR')
-
-gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
 
 rcs_common_env = lib_env.Clone()
 target_os = env.get('TARGET_OS')
@@ -99,7 +97,6 @@ if target_os == 'linux':
 
 	rcs_common_test_env.PrependUnique(CPPPATH = [
 		env.get('SRC_DIR')+'/extlibs/hippomocks-master',
-		gtest_dir + '/include',
 		'utils/include'
 		])
 
