--- a/service/resource-encapsulation/src/resourceBroker/unittest/SConscript
+++ b/service/resource-encapsulation/src/resourceBroker/unittest/SConscript
@@ -17,6 +17,7 @@
 # limitations under the License.
 #
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+SConscript('#extlibs/gtest/SConscript')
 
 ##
 # ResourceBroker Unit Test build script
@@ -40,7 +41,6 @@ SConscript(env.get('SRC_DIR') + '/service/third_party_libs.scons', 'lib_env')
 #unit test setting
 ######################################################################
 src_dir = lib_env.get('SRC_DIR')
-gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
 
 broker_test_env = lib_env.Clone()
 target_os = env.get('TARGET_OS')
@@ -56,8 +56,7 @@ broker_test_env.AppendUnique(CPPPATH = ['../../common/expiryTimer/include'])
 broker_test_env.AppendUnique(CPPPATH = ['../../common/expiryTimer/src'])
 broker_test_env.AppendUnique(CPPPATH = ['../../common/utils/include'])
 
-broker_test_env.PrependUnique(CPPPATH = [env.get('SRC_DIR')+'/extlibs/hippomocks-master',
-                             gtest_dir + '/include'])
+broker_test_env.PrependUnique(CPPPATH = [env.get('SRC_DIR')+'/extlibs/hippomocks-master'])
 broker_test_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
 
 broker_test_env.PrependUnique(LIBS = ['coap'])
