Build: gtest, disable unused shared lib and keep using static one
Also let's remove hardcoded path, as there is not warranty
that the files will be at the same place in any configurations.

Problem was observed when building on recent yocto configuration

If for some reason shared libs are desired, you can revert that patch,
but double check about security checks ("ld: final link failed: Bad value")

Bug-AGL: https://jira.automotivelinux.org/browse/SPEC-158
Change-Id: Ia13ee8c03f65f3407e88ff21d51b292261c9f2a3
Signed-off-by: Philippe Coval <philippe.coval@osg.samsung.com>

--- a/resource/c_common/ocrandom/test/SConscript
+++ b/resource/c_common/ocrandom/test/SConscript
@@ -21,6 +21,7 @@
 Import('env')
 import os
 import os.path
+SConscript(env.get('SRC_DIR') + '/extlibs/gtest/SConscript')
 randomtest_env = env.Clone()
 
 src_dir = randomtest_env.get('SRC_DIR')
