--- a/plugins/unittests/SConscript
+++ b/plugins/unittests/SConscript
@@ -21,6 +21,7 @@
 Import('env')
 import os
 import os.path
+SConscript(env.get('SRC_DIR') + '/extlibs/gtest/SConscript')
 unittests_env = env.Clone()
 
 src_dir = unittests_env.get('SRC_DIR')
@@ -37,7 +38,6 @@ unittests_env.PrependUnique(CPPPATH = [
 unittests_env.AppendUnique(CXXFLAGS = ['-std=c++0x', '-Wall', '-pthread'])
 unittests_env.PrependUnique(LIBS = ['-lpthread'])
 unittests_env.AppendUnique(LIBPATH = [env.get('BUILD_DIR')])
-unittests_env.AppendUnique(LIBPATH = [os.path.join(src_dir, 'extlibs', 'gtest', 'gtest-1.7.0', 'lib', '.libs')])
 unittests_env.PrependUnique(LIBS = [
 		'plugin_interface',
 		'oc',
