--- a/service/things-manager/unittests/SConscript
+++ b/service/things-manager/unittests/SConscript
@@ -23,6 +23,7 @@
 ##
 import os
 Import('env')
+SConscript(env.get('SRC_DIR') + '/extlibs/gtest/SConscript')
 
 if env.get('RELEASE'):
         env.AppendUnique(CCFLAGS = ['-Os'])
@@ -39,10 +40,6 @@ SConscript(env.get('SRC_DIR') + '/service/third_party_libs.scons', 'lib_env')
 
 target_os = env.get('TARGET_OS')
 if target_os == 'linux':
-        # Verify that 'google unit test' library is installed.  If not,
-        # get it and install it
-        SConscript(env.get('SRC_DIR') + '/extlibs/gtest/SConscript')
-
         # Verify that 'hippomocks' mocking code is installed.  If not,
         # get it and install it
         SConscript(env.get('SRC_DIR') + '/extlibs/hippomocks.scons')
@@ -58,9 +55,6 @@ gtest_dir = src_dir + '/extlibs/gtest/gtest-1.7.0'
 ######################################################################
 # Build flags
 ######################################################################
-gtest = File(gtest_dir + '/lib/.libs/libgtest.a')
-gtest_main = File(gtest_dir + '/lib/.libs/libgtest_main.a')
-
 ThingsManager_gtest_env.AppendUnique(
         CPPPATH = [
                 src_dir + '/extlibs/hippomocks-master',
@@ -83,8 +77,8 @@ ThingsManager_gtest_env.PrependUnique(LIBS = [
     'oc_logger_core',
     'oc',
     'octbstack',
-    gtest,
-    gtest_main])
+    'gtest',
+    'gtest_main'])
 
 ThingsManager_gtest_env.AppendUnique(LIBS = ['dl'])
 
