WIP: mod: debian/overlay/Makefile (sandbox/rzr/on/master/debian)
Signed-off-by: Philippe Coval <rzr@gna.org>

--- a/debian/overlay/Makefile
+++ b/debian/overlay/Makefile
@@ -69,7 +69,7 @@ build: SConstruct deps
     TARGET_TRANSPORT=IP
 
 check: auto_build.sh
-	$< unit_tests
+	${<D}/${<F} unit_tests
 
 deps/ubuntu: extlibs/boost/boost_1_55_0 
 
