--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Build-Depends: debhelper (>= 8.0.0),
  libboost-thread-dev,
  libboost-all-dev,
  libcurl4-openssl-dev,
- libgtest-dev.
+ libgtest-dev,
  valgrind
 Standards-Version: 3.9.4
 Section: libs
